syntax = "proto3";

package approval;

enum ApprovalType {
  Spending = 0;
  ProofOfReserve = 1;
  KeyAgentPayment = 2;
}

message ApprovalV1 {
  string psbt = 1;
  bytes network = 2;
  ApprovalType type = 3;
}

message Approval {
  oneof object {
    ApprovalV1 v1 = 1;
  }
}